[gd_scene load_steps=7 format=3 uid="uid://b1uv58ufxqo71"]

[ext_resource type="Script" path="res://scripts/ball.gd" id="1_6ih6t"]
[ext_resource type="Texture2D" uid="uid://c1jugjccl2h4e" path="res://assets/white.png" id="1_l7bqr"]
[ext_resource type="AudioStream" uid="uid://c3vxtv7lt4o2w" path="res://assets/sounds/knock-paddle.wav" id="3_r788q"]
[ext_resource type="AudioStream" uid="uid://cyp0pc76hi1rx" path="res://assets/sounds/knock.wav" id="4_0xhvj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5jmmd"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_giu1y"]
size = Vector2(10, 10)

[node name="Ball" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_6ih6t")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_l7bqr")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5jmmd")

[node name="Area" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Area"]
shape = SubResource("RectangleShape2D_giu1y")

[node name="AudioEffects" type="Node" parent="."]

[node name="KnockPaddle" type="AudioStreamPlayer" parent="AudioEffects"]
stream = ExtResource("3_r788q")

[node name="KnockWall" type="AudioStreamPlayer" parent="AudioEffects"]
stream = ExtResource("4_0xhvj")

[connection signal="body_entered" from="Area" to="." method="on_area_body_entered"]
